# texteditor

./: .gitignore  CMakeLists.txt  README.md  pisces-editor.desktop  pisces-texteditor.desktop
debian/: changelog  control
qml/: ExitPromptDialog.qml  FileSelectDialog.qml  TextEditor.qml  main.qml
src/: main.cpp
